rustcc/tests/input/parser/invalid/space_in_keyword.c
// RUN: ${{rustcc}}
// EXPECT-FAILURE

int main(void){
    retur n 0;
}